--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,29 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <Button
+        android:id="@+id/btnAcc"
+        android:layout_width="156dp"
+        android:layout_height="wrap_content"
+        android:text="Accelerometer"
+        android:onClick="startAccel"
+        tools:layout_editor_absoluteX="36dp"
+        tools:layout_editor_absoluteY="341dp" />
+
+    <Button
+        android:id="@+id/btnCompass"
+        android:layout_width="156dp"
+        android:layout_height="wrap_content"
+        android:text="compass"
+        tools:layout_editor_absoluteX="215dp"
+        tools:layout_editor_absoluteY="341dp" />
+
     <TextView
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="HELLO"
+        tools:layout_editor_absoluteX="176dp"
+        tools:layout_editor_absoluteY="199dp" />
 
 </android.support.constraint.ConstraintLayout>
