new CompassActivity, also displays text of the accel. values?

--- a/app/src/main/res/layout/activity_accel.xml
+++ b/app/src/main/res/layout/activity_accel.xml
@@ -7,11 +7,11 @@
     tools:context=".AccelActivity">
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/txtValues"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="162dp"
-        android:text="Here are the values:"
+        android:text="Accelorometer values:"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
