--- a/app/src/main/res/layout/activity_compass.xml
+++ b/app/src/main/res/layout/activity_compass.xml
@@ -6,4 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".CompassActivity">
 
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/Compass"
+        tools:layout_editor_absoluteX="85dp"
+        tools:layout_editor_absoluteY="245dp" />
 </android.support.constraint.ConstraintLayout>
